--- a/SLIDER/index.html
+++ b/SLIDER/index.html
@@ -11,16 +11,16 @@
     <div class="main">
         <div class="container">
             <div class="slider one">
-                <img src="/img1.jpg" alt="">
+                <img src="img1.jpg" alt="">
             </div>
             <div class="slider two">
-                <img src="/img2.jpg" alt="">
+                <img src="img2.jpg" alt="">
             </div>
             <div class="slider three">
-                <img src="/img3.jpg" alt="">
+                <img src="img3.jpg" alt="">
             </div>
             <div class="slider four">
-                <img src="/img4.jpg" alt="">
+                <img src="img4.jpg" alt="">
             </div>
             <button class="slider__btn slider__btn--left">&larr;</button>
         <button class="slider__btn slider__btn--right">&rarr;</button>
